@@ -8,6 +8,7 @@ Simon Wenner:
  * Paranoia: modular key management (first step)
  * Paranoia: key list uses move-to-front transform
  * Paranoia: A pop-up at the end and status messages while generating new keys
+ * Paranoia: '/otp reload' command added to regenerate the key list
 
 Version 0.2.0
 --------------------------------------------------------------------------------
